// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width tablet slice 1`] = `
<View>
  <TileR />
</View>
`;

exports[`2. secondary four tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
</View>
`;
